--- a/SurfsUp-Blazor/Pages/Surfboards/Create.razor
+++ b/SurfsUp-Blazor/Pages/Surfboards/Create.razor
@@ -3,18 +3,24 @@
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
 
+<input type="text" placeholder="Title" @bind-value="surfboard.Title" />
+<input type="number" placeholder="Length" @bind-value="surfboard.Length" />
+<input type="number" placeholder="Width" @bind-value="surfboard.Width" />
+<input type="number" placeholder="Volume" @bind-value="surfboard.Volume" />
+<input type="number" placeholder="Thickness" @bind-value="surfboard.Thickness" />
+<input type="text" placeholder="Type" @bind-value="surfboard.Type" />
+<input type="number" placeholder="Price" @bind-value="surfboard.Price" />
+<input type="text" placeholder="Equipment" @bind-value="surfboard.Equipment" />
 
-<h4>Indsæt Create frontend her!</h4>
-
-
+<button class="btn btn-primary" @onclick="CreateSurfboard">Create Surboard</button>
 
 @code 
 {
-    private List<Surfboard>? surfboards;
+    public Surfboard? surfboard = new Surfboard();
 
     private async Task CreateSurfboard()
     {
-        var response = await Http.PostAsJsonAsync("/surfboards/create", surfboards);
+        var response = await Http.PostAsJsonAsync("/surfboards/create", surfboard);
         if (response.IsSuccessStatusCode)
         {
             NavigationManager.NavigateTo("/Surfboards/index");
